Fixed left shift of close buttons

--- a/kerbalFloatCommon.css
+++ b/kerbalFloatCommon.css
@@ -23,7 +23,7 @@ button, input, select {
 }
 #Close {
 	float: right;
-	margin-right: .5em;
+	/* margin-right: .5em; */
 	background-color: white;
 }
 div.fill {
